tests/more_react/more_react.exp
Error: API.react.js:4
  4: app.setProps({y:42}); // error, y:number but foo expects string in App.react
         ^^^^^^^^ property `setProps`. Property not found in
  4: app.setProps({y:42}); // error, y:number but foo expects string in App.react
     ^^^ React.Element

Error: API.react.js:5
  5: app.setState({z:42}); // error, z:number but foo expects string in App.react
         ^^^^^^^^ property `setState`. Property not found in
  5: app.setState({z:42}); // error, z:number but foo expects string in App.react
     ^^^ React.Element

Error: App.react.js:36
 36:         {foo(z,x)} // error, since z: number
                  ^ number. This type is incompatible with the expected param type of
 10: function foo(p:string,q:string):string { return p+q; }
                    ^^^^^^ string

Error: checkPropTypes.js:7
  7: checkPropTypes({ foo: PropTypes.string }, { foo: 'foo' }); // error: missing arguments
     ^^^^^^^^^^^^^^ Cannot call `checkPropTypes` because function [1] requires another argument.
  References:
                                               v---
  190:   declare export function checkPropTypes<V>(
  191:     propTypes: $Subtype<{[_: $Keys<V>]: ReactPropsCheckType}>,
  192:     values: V,
  ...:
  196:   ) : void;
         -------^ [1]: function. See lib: <BUILTINS>/react.js:190

Error: checkPropTypes.js:8
  8: checkPropTypes({ foo: PropTypes.string }, { foo: 'foo' }, 'value'); // error: missing argument
     ^^^^^^^^^^^^^^ Cannot call `checkPropTypes` because function [1] requires another argument.
  References:
                                               v---
  190:   declare export function checkPropTypes<V>(
  191:     propTypes: $Subtype<{[_: $Keys<V>]: ReactPropsCheckType}>,
  192:     values: V,
  ...:
  196:   ) : void;
         -------^ [1]: function. See lib: <BUILTINS>/react.js:190

Error: checkPropTypes.js:10
 10: checkPropTypes({ bar: PropTypes.string }, { foo: 'foo' }, 'value', 'TestComponent'); // error: property not found
                    ^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
191:     propTypes: $Subtype<{[_: $Keys<V>]: ReactPropsCheckType}>,
                                  ^^^^^^^^ object literal. See lib: <BUILTINS>/react.js:191

Error: checkPropTypes.js:12
 12: checkPropTypes({ foo: PropTypes.string }, { foo: 'foo' }, 'value', 'TestComponent', () => 123); // error: number ~> string
                                                                                               ^^^ Cannot call `checkPropTypes` with function bound to `getStack` because in the return value, number [1] is incompatible with string [2].
  References:
   12: checkPropTypes({ foo: PropTypes.string }, { foo: 'foo' }, 'value', 'TestComponent', () => 123); // error: number ~> string
                                                                                                 ^^^ [1]: number
  195:     getStack: ?(() => ?string)
                              ^^^^^^ [2]: string. See lib: <BUILTINS>/react.js:195

Error: propTypes.js:15
 15: <D />; // errors: properties `name` and `title` not found
     ^^^^^ props. This type is incompatible with
                  v
  9:   propTypes: {
 10:     name: React.PropTypes.string.isRequired,
 11:     ...C.propTypes,
 12:   }
       ^ propTypes of React component
  Property `name` is incompatible:
                      v
      9:   propTypes: {
     10:     name: React.PropTypes.string.isRequired,
     11:     ...C.propTypes,
     12:   }
           ^ property `name`. Property not found in
     15: <D />; // errors: properties `name` and `title` not found
         ^^^^^ props

Error: propTypes.js:15
 15: <D />; // errors: properties `name` and `title` not found
     ^^^^^ props. This type is incompatible with
                  v
  9:   propTypes: {
 10:     name: React.PropTypes.string.isRequired,
 11:     ...C.propTypes,
 12:   }
       ^ propTypes of React component
  Property `title` is incompatible:
                      v
      9:   propTypes: {
     10:     name: React.PropTypes.string.isRequired,
     11:     ...C.propTypes,
     12:   }
           ^ property `title`. Property not found in
     15: <D />; // errors: properties `name` and `title` not found
         ^^^^^ props


Found 9 errors
